# alain

./: .gitignore  .hgignore  .pylintrc  README.md  alain-dev.ini  alain.ini  buildout.cfg  setup.cfg  setup.py  tox.ini  update.sh
.github/workflows/: deploy.yml
alain/: afpyro.py  alain3.py  cantine.py  crons.py  main.py  meetup.py  regexp.py  rss.py  shell.py
docs/: Makefile  conf.py  index.txt
src/alain/: alain3.py  cantine.py  crons.py  main.py  meetup.py  regexp.py  rss.py  shell.py
