[metadata]
name = alain
version = 0.1
description = Alain
long_description = "AFPy's IRC bot"
keywords = irc afpy
author = Gael Pasgrimaud
author_email = gawel@afpy.org
url = https://github.com/afpy/alain/
license = MIT

[options]
packages = find:
package_dir = =src/
include_package_data = True
zip_safe = False
install_requires =
    irc3
    chut
    feedparser
    requests
    twitter
    aiocron

[options.packages.find]
where = src/

[options.extras_require]
dev =
    flake8
    pylint==2.0.0.dev
    astroid==2.0.0.dev
    pytest
    pytest-cov
    tox
    bandit
    black
    mypy
